fini a propos et certif

--- a/src/app/work/projects/simple-portfolio-builder.mdx
+++ b/src/app/work/projects/simple-portfolio-builder.mdx
@@ -1,7 +1,10 @@
 ---
-title: "Once UI: Open-source design system"
-publishedAt: "2024-04-08"
+title: "Satge de première année"
+publishedAt: "2025-05-08"
 images:
-  - "/images/projects/project-01/cover-04.jpg"
-  - "/images/projects/project-01/video-01.mp4"
+  - "/images/projects/1.jpg"
+  - "/images/projects/2.jpg"
+  - "/images/projects/3.jpg"
+  - "/images/projects/4.jpg"
+  - "/images/projects/5.jpg"
 ---
