--- a/src/app/work/projects/simple-portfolio-builder.mdx
+++ b/src/app/work/projects/simple-portfolio-builder.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Satge de première année"
+title: "Stage de première année - CGI"
 publishedAt: "2025-05-08"
 images:
   - "/images/projects/1.jpg"
